# webpage-info

./: CHANGELOG.md  Cargo.toml  README.md
benches/: parsing.rs
examples/: fetch_example.rs
src/: error.rs  html.rs  http.rs  lib.rs  opengraph.rs  schema_org.rs
test_data/: sample.html
